--- a/app/src/main/res/layout/activity_remote_passwd_manage.xml
+++ b/app/src/main/res/layout/activity_remote_passwd_manage.xml
@@ -8,6 +8,7 @@
     tools:context=".ui.activity.setting.LoginPasswdManageActivity">
 
     <LinearLayout
+        android:layout_marginTop="10dp"
         android:id="@+id/remote_set_passwd"
         style="@style/setting_page_item_style"
         android:background="@color/white"
