--- a/app/src/main/res/layout/activity_msg_manage.xml
+++ b/app/src/main/res/layout/activity_msg_manage.xml
@@ -53,7 +53,7 @@
 
 
             <CheckBox
-                android:id="@+id/annual_inspection_reminder"
+                android:id="@+id/cb_start_reminding"
                 style="@style/manage_message_checkbox"
                 android:layout_centerVertical="true"/>
         </LinearLayout>
