1，修改公用dialog界面 2，处理联系我们相关逻辑 3，处理远程模块UI

--- a/app/src/main/res/drawable/dialog_air_condition_bg.xml
+++ b/app/src/main/res/drawable/dialog_air_condition_bg.xml
@@ -3,8 +3,6 @@
 
     <corners android:radius="8dp" />
 
-    <stroke android:color="#fff" />
-
-    <solid android:color="#fff" />
+    <solid android:color="#E6ffffff" />
 
 </shape>
