--- a/app/src/main/res/layout/dialog_notitle.xml
+++ b/app/src/main/res/layout/dialog_notitle.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dip"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/dialog_air_condition_bg"
     android:orientation="vertical" >
