--- a/app/src/main/res/layout/grid_remote_item.xml
+++ b/app/src/main/res/layout/grid_remote_item.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dip"
-        android:textColor="#fff"
+        android:textColor="@color/text_color_gray3"
         android:textSize="14sp" />
 
 </LinearLayout>
