--- a/app/src/main/res/layout/grid_remote_states_item.xml
+++ b/app/src/main/res/layout/grid_remote_states_item.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dip"
-        android:textColor="#999999"
+        android:textColor="@color/text_color_gray1"
         android:textSize="13sp" />
 
 </LinearLayout>
