--- a/app/src/main/res/values-xhdpi/styles.xml
+++ b/app/src/main/res/values-xhdpi/styles.xml
@@ -672,7 +672,7 @@
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/main_page_linear_border</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:background">@drawable/edittext_bg</item>
         <item name="android:textColorHint">@color/text_color_gray1</item>
         <item name="android:paddingLeft">9dip</item>
@@ -879,7 +879,7 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:textSize">14sp</item>
         <item name="android:singleLine">true</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/text_color_gray2</item>
     </style>
 
     <!-- 安全中心 -->
