--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -98,7 +98,7 @@
     <color name="blue_fill">#204369</color>
     <color name="item_bg">#2e2d33</color>
 
-    <color name="bar_gragh_time_color">#2c77c0</color>
+    <color name="bar_gragh_time_color">#478cea</color>
     <color name="bar_gragh_miles_color">#04b59e</color>
 
     <color name="blue_txt">#478ce0</color>
