--- a/app/src/main/res/layout/activity_device_bind.xml
+++ b/app/src/main/res/layout/activity_device_bind.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@mipmap/login_bg"
+    android:background="@color/layout_background"
     tools:context="com.carlt.doride.ui.activity.login.DeviceBindActivity">
 
     <include layout="@layout/layout_title"
@@ -13,7 +13,8 @@
     <ImageView
         android:id="@+id/bind_logo"
         android:layout_width="match_parent"
-        android:layout_height="260dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="33dp"
         android:src="@mipmap/device_bind_logo"
         android:scaleType="fitXY"
         android:contentDescription="@string/app_name" />
@@ -22,9 +23,13 @@
     <EditText
         android:id="@+id/car_vin_code"
         style="@style/usercenter_edit1"
+        android:layout_height="44dp"
         android:layout_marginLeft="12dip"
         android:layout_marginRight="12dip"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginBottom="0dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:background="@drawable/login_input_bg"
         android:maxLength="17"
         android:digits="@string/vin_filter_string"
@@ -38,7 +43,8 @@
         android:layout_height="50dp"
         android:layout_marginLeft="12dip"
         android:layout_marginRight="12dip"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="0dp"
         android:text="@string/_car_select_type"
         android:gravity="center_vertical"
         android:background="@drawable/login_input_bg"
@@ -49,7 +55,7 @@
         style="@style/public_bottom_btn"
         android:layout_height="44dp"
         android:text="@string/device_bind_tx"
-        android:layout_marginTop="25dip"
+        android:layout_marginTop="44dip"
         android:layout_marginLeft="12dip"
         android:textColor="@color/white"
         android:layout_marginRight="12dip"
