--- a/app/src/main/res/layout/activity_gps_trail.xml
+++ b/app/src/main/res/layout/activity_gps_trail.xml
@@ -57,7 +57,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#2e2d33"
+        android:background="@color/white"
         android:orientation="vertical"
         android:paddingBottom="6dip"
         android:paddingLeft="12dip"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:text="轨迹里程"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="16sp" />
 
             <TextView
@@ -86,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:text=""
-                android:textColor="@color/white"
+                android:textColor="@color/text_color_gray3"
                 android:textSize="14sp" />
         </RelativeLayout>
 
