--- a/app/src/main/res/layout/activity_remote_log.xml
+++ b/app/src/main/res/layout/activity_remote_log.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/layout_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/layout_background"
     >
+
     <ListView
         android:id="@+id/remotelog_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dip" >
+        android:layout_marginTop="10dp"
+        android:divider="@color/transparent"
+        android:dividerHeight="0dp">
+
     </ListView>
 </RelativeLayout>
