--- a/app/src/main/res/layout/activity_remote_main.xml
+++ b/app/src/main/res/layout/activity_remote_main.xml
@@ -54,20 +54,20 @@
                         android:clickable="true"
                         android:src="@drawable/remote_stop" />
                 </RelativeLayout>
-                <com.carlt.doride.ui.view.MyGridView
-                    android:id="@+id/remote_main_gridView_function"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@id/remote_main_lay_engine"
-                    android:layout_marginBottom="15dip"
-                    android:layout_marginLeft="15dip"
-                    android:layout_marginRight="15dip"
-                    android:horizontalSpacing="20dip"
-                    android:minHeight="400dip"
-                    android:numColumns="3"
-                    android:scrollbars="none"
-                    android:verticalSpacing="18dip"
-                    android:visibility="gone" />
+                <!--<com.carlt.doride.ui.view.MyGridView-->
+                    <!--android:id="@+id/remote_main_gridView_function"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_below="@id/remote_main_lay_engine"-->
+                    <!--android:layout_marginBottom="15dip"-->
+                    <!--android:layout_marginLeft="15dip"-->
+                    <!--android:layout_marginRight="15dip"-->
+                    <!--android:horizontalSpacing="20dip"-->
+                    <!--android:minHeight="400dip"-->
+                    <!--android:numColumns="3"-->
+                    <!--android:scrollbars="none"-->
+                    <!--android:verticalSpacing="18dip"-->
+                    <!--android:visibility="gone" />-->
 
                 <LinearLayout
                     android:id="@+id/remote_main_line_function"
@@ -115,7 +115,7 @@
         android:layout_below="@id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#dd000000"
+        android:background="#E6ffffff"
         android:visibility="gone"
         >
         <com.carlt.doride.ui.view.MyGridView
