--- a/app/src/main/res/layout/dialog_car.xml
+++ b/app/src/main/res/layout/dialog_car.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="228dip"
-    android:background="@color/dialog_background" >
+                android:layout_width="match_parent"
+                android:layout_height="228dip"
+                android:background="@color/dialog_background">
+
     <com.carlt.doride.ui.view.CarGridView
         android:id="@+id/dialog_car_grid"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-         android:gravity="center"
-        android:scrollbars="none"
         android:layout_centerInParent="true"
-        android:listSelector="@color/transparent"/>
+        android:gravity="center"
+        android:listSelector="@color/transparent"
+        android:scrollbars="none"/>
+
     <TextView
-        android:id="@+id/dialog_car_txt_nodata" 
-         android:layout_width="fill_parent"
+        android:id="@+id/dialog_car_txt_nodata"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:textSize="20sp"
         android:gravity="center"
         android:textColor="#333333"
+        android:textSize="20sp"
         android:visibility="gone"/>
+
     <View
         android:id="@+id/dialog_car_line1"
         android:layout_width="fill_parent"
         android:layout_height="0.5dip"
-        android:background="#333333" 
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true"
+        android:background="#333333"/>
 
     <View
         android:id="@+id/dialog_car_line2"
         android:layout_width="fill_parent"
         android:layout_height="0.5dip"
         android:layout_alignParentBottom="true"
-        android:background="#333333" />
+        android:background="#333333"/>
 
 </RelativeLayout>
