--- a/app/src/main/res/layout/grid_remote_states_item.xml
+++ b/app/src/main/res/layout/grid_remote_states_item.xml
@@ -9,20 +9,28 @@
         android:id="@+id/remote_states_item_img_icon"
         android:layout_width="30dp"
         android:layout_height="30dp" />
-    <TextView
-        android:id="@+id/remote_states_item_txt_name"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
-        android:textColor="@color/app_white"
-        android:textSize="14sp" />
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/remote_states_item_txt_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/text_color_gray3"
+            android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/remote_states_item_txt_state"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
-        android:textColor="@color/text_color_gray1"
-        android:textSize="13sp" />
+        <TextView
+            android:id="@+id/remote_states_item_txt_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dip"
+            android:textColor="@color/text_color_gray1"
+            android:layout_marginLeft="5dp"
+            android:textSize="13sp" />
+    </LinearLayout>
+
 
 </LinearLayout>
