--- a/app/src/main/res/layout-xhdpi/activity_terms_declare.xml
+++ b/app/src/main/res/layout-xhdpi/activity_terms_declare.xml
@@ -13,7 +13,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/title"
-        android:padding="10dip" 
+        android:padding="10dp"
         android:scrollbars="none"/>
 
 </LinearLayout>
