--- a/app/src/main/res/layout/activity_remote_main.xml
+++ b/app/src/main/res/layout/activity_remote_main.xml
@@ -104,7 +104,7 @@
                     android:layout_marginTop="20dip"
                     android:gravity="center"
                     android:text="该车型不支持远程控制功能"
-                    android:textColor="#fff"
+                    android:textColor="@color/text_color_gray3"
                     android:textSize="14sp" />
 
             </LinearLayout>
