--- a/app/src/main/res/layout/dialog_remote_no_title.xml
+++ b/app/src/main/res/layout/dialog_remote_no_title.xml
@@ -5,6 +5,21 @@
               android:background="@drawable/dialog_air_condition_bg"
               android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tvDialogTitle"
+        android:layout_width="match_parent"
+        android:layout_height="43dp"
+        android:layout_gravity="center"
+        android:layout_toRightOf="@id/line_v"
+        android:gravity="center"
+        android:text="title"
+        android:textColor="@color/text_color_gray3"
+        android:textSize="14sp"/>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:background="#d6d6d6"/>
     <!-- 内容部分 -->
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,8 +39,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:clickable="true"
-                android:background="@drawable/remote_lock_selector"/>
+                android:background="@drawable/remote_lock_selector"
+                android:clickable="true"/>
 
             <TextView
                 android:id="@+id/tvName1"
@@ -52,8 +67,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dip"
-                android:clickable="true"
-                android:background="@drawable/remote_lock_selector"/>
+                android:background="@drawable/remote_lock_selector"
+                android:clickable="true"/>
 
             <TextView
                 android:id="@+id/tvName2"
@@ -88,8 +103,7 @@
             android:gravity="center"
             android:text="关闭"
             android:textColor="#2c77c0"
-            android:textSize="14sp"
-            android:textStyle="bold"/>
+            android:textSize="14sp"/>
     </RelativeLayout>
 
 
