--- a/app/src/main/res/layout/fragment_carmain_layout.xml
+++ b/app/src/main/res/layout/fragment_carmain_layout.xml
@@ -95,7 +95,7 @@
                         android:layout_height="27dip"
                         android:layout_below="@id/car_main_lay_safety_lay2"
                         android:gravity="center"
-                        android:text="27"
+                        android:text="--"
                         android:textColor="@color/title_bg"
                         android:textSize="24sp"/>
 
@@ -139,7 +139,7 @@
                         android:layout_height="27dip"
                         android:layout_below="@id/car_main_lay_safety_lay2"
                         android:gravity="center"
-                        android:text="27"
+                        android:text="--"
                         android:textColor="@color/title_bg"
                         android:textSize="24sp"/>
 
@@ -184,7 +184,7 @@
                         android:layout_height="27dip"
                         android:layout_below="@id/car_main_lay_safety_lay2"
                         android:gravity="center"
-                        android:text="27"
+                        android:text="--"
                         android:textColor="@color/title_bg"
                         android:textSize="24sp"/>
 
@@ -333,7 +333,7 @@
                     android:id="@+id/car_main_txt_maintain"
                     android:layout_width="wrap_content"
                     android:layout_height="27dip"
-                    android:text="98"
+                    android:text="--"
                     android:textColor="@color/text_color_gray2"
                     android:textSize="@dimen/text_size_small_s1"/>
             </LinearLayout>
