注册时密码加密，信息中心添加安防提醒页签，胎压监测刷新按钮，激活话术修改，创建文件名字修改成大乘

--- a/app/src/main/res/layout/activity_report_day.xml
+++ b/app/src/main/res/layout/activity_report_day.xml
@@ -281,15 +281,16 @@
 
     <com.carlt.doride.ui.pull.PullToRefreshListView
         android:id="@+id/day_refresh_logList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/top4"
-        android:layout_marginTop="10dp"
-        android:background="@color/layout_background"
-        android:divider="@null"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="0dp" >
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/top4"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="10dp"
+
+        >
     </com.carlt.doride.ui.pull.PullToRefreshListView>
 
 </RelativeLayout>
