--- a/app/src/main/res/layout/list_item_secretary_types.xml
+++ b/app/src/main/res/layout/list_item_secretary_types.xml
@@ -63,7 +63,7 @@
         android:background="@drawable/arrow_right" />
 
     <View
-        android:id="@+id/line"
+        android:id="@+id/list_item_secretary_line"
         style="@style/line_h"
         android:layout_alignParentBottom="true"
         android:layout_marginRight="12dp"
