--- a/app/src/main/res/layout/activity_activate_bind.xml
+++ b/app/src/main/res/layout/activity_activate_bind.xml
@@ -32,6 +32,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textSize="14sp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
         android:textColor="@color/text_color_gray2"
         android:layout_marginTop="14dip"
         android:text="@string/device_activate_tip2"
