--- a/app/src/main/res/layout/activity_information_centre.xml
+++ b/app/src/main/res/layout/activity_information_centre.xml
@@ -10,5 +10,6 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:layout_marginTop="10dp"
+        android:divider="@null"
          />
 </LinearLayout>
