--- a/app/src/main/res/layout/list_item_report_day.xml
+++ b/app/src/main/res/layout/list_item_report_day.xml
@@ -4,14 +4,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/report_day_item_bg"
+    android:paddingTop="5dp"
     android:paddingBottom="5dp"
-    android:paddingTop="5dp" >
+     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/list_item_day_bg"
+        android:background="@drawable/report_day_item_bg"
         android:orientation="vertical" >
 
         <RelativeLayout
@@ -150,8 +150,8 @@
 
         <View
             style="@style/line_h"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
