--- a/app/src/main/res/layout/mymarker.xml
+++ b/app/src/main/res/layout/mymarker.xml
@@ -18,6 +18,7 @@
         android:textSize="12sp"
         android:textColor="@color/text_color_gray3"
         android:background="#f0f0f0"
+        android:layout_marginTop="5dp"
         android:text="hello"
         />
 </LinearLayout>
