--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -3,39 +3,25 @@
     android:id="@+id/loading_lay_mainlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/layout_background">
+    android:background="@color/main_color">
 
-    <include
-        android:id="@+id/layout_title"
-        layout="@layout/layout_title"
-        />
-
-    <LinearLayout
-        android:id="@+id/layout_subtitle"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/layout_title"
-        android:orientation="horizontal"
-        android:visibility="gone"></LinearLayout>
 
     <include
         layout="@layout/layout_error"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/layout_subtitle"
         android:visibility="gone" />
 
     <include
         layout="@layout/layout_nodata"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/layout_subtitle"
         android:visibility="gone" />
 
     <include
         layout="@layout/layout_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/layout_subtitle" />
+        />
 
 </RelativeLayout>
