--- a/app/src/main/res/layout/activity_remote_main.xml
+++ b/app/src/main/res/layout/activity_remote_main.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/layout_background" >
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/layout_background">
+
     <include
         android:id="@+id/title"
         layout="@layout/layout_title_remote"/>
 
     <ScrollView
-        android:layout_below="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title"
+        android:scrollbars="none">
+
         <RelativeLayout
             android:layout_width="match_parent"
-            android:visibility="visible"
+            android:layout_height="match_parent"
             android:background="@color/layout_background"
-            android:layout_height="match_parent" >
+            android:visibility="visible">
 
 
             <RelativeLayout
@@ -23,12 +26,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 >
+
                 <RelativeLayout
                     android:id="@+id/remote_main_lay_engine"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dip"
-                    android:layout_marginTop="30dip" >
+                    android:layout_marginTop="30dip">
 
                     <ImageView
                         android:id="@+id/remote_main_img_start"
@@ -36,13 +40,14 @@
                         android:layout_height="250dip"
                         android:layout_centerHorizontal="true"
                         android:clickable="true"
-                        android:src="@drawable/remote_start" />
+                        android:src="@drawable/remote_start"/>
+
                     <View
                         android:id="@+id/remote_main_view_stop_mask"
                         android:layout_width="224.5dip"
                         android:layout_height="35dip"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginTop="210dip" />
+                        android:layout_marginTop="210dip"/>
 
                     <ImageView
                         android:id="@+id/remote_main_img_stop"
@@ -52,22 +57,22 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="-40dip"
                         android:clickable="true"
-                        android:src="@drawable/remote_stop" />
+                        android:src="@drawable/remote_stop"/>
                 </RelativeLayout>
                 <!--<com.carlt.doride.ui.view.MyGridView-->
-                    <!--android:id="@+id/remote_main_gridView_function"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--android:layout_below="@id/remote_main_lay_engine"-->
-                    <!--android:layout_marginBottom="15dip"-->
-                    <!--android:layout_marginLeft="15dip"-->
-                    <!--android:layout_marginRight="15dip"-->
-                    <!--android:horizontalSpacing="20dip"-->
-                    <!--android:minHeight="400dip"-->
-                    <!--android:numColumns="3"-->
-                    <!--android:scrollbars="none"-->
-                    <!--android:verticalSpacing="18dip"-->
-                    <!--android:visibility="gone" />-->
+                <!--android:id="@+id/remote_main_gridView_function"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_below="@id/remote_main_lay_engine"-->
+                <!--android:layout_marginBottom="15dip"-->
+                <!--android:layout_marginLeft="15dip"-->
+                <!--android:layout_marginRight="15dip"-->
+                <!--android:horizontalSpacing="20dip"-->
+                <!--android:minHeight="400dip"-->
+                <!--android:numColumns="3"-->
+                <!--android:scrollbars="none"-->
+                <!--android:verticalSpacing="18dip"-->
+                <!--android:visibility="gone" />-->
 
                 <LinearLayout
                     android:id="@+id/remote_main_line_function"
@@ -77,9 +82,10 @@
                     android:layout_marginBottom="15dip"
                     android:layout_marginLeft="5dip"
                     android:layout_marginRight="5dip"
-                    android:orientation="vertical" >
+                    android:orientation="vertical">
                 </LinearLayout>
             </RelativeLayout>
+
             <LinearLayout
                 android:id="@+id/remote_main_lay_unspport"
                 android:layout_width="match_parent"
@@ -87,7 +93,7 @@
                 android:background="@color/layout_background"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:visibility="gone" >
+                android:visibility="gone">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -105,19 +111,21 @@
                     android:gravity="center"
                     android:text="该车型不支持远程控制功能"
                     android:textColor="@color/text_color_gray3"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
 
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
+
     <RelativeLayout
         android:id="@+id/remote_main_lay_state"
-        android:layout_below="@id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/title"
         android:background="#E6ffffff"
         android:visibility="gone"
         >
+
         <com.carlt.doride.ui.view.MyGridView
             android:id="@+id/remote_main_gridView_state"
             android:layout_width="wrap_content"
@@ -127,7 +135,7 @@
             android:layout_marginTop="10dip"
             android:horizontalSpacing="10dip"
             android:scrollbars="none"
-            android:verticalSpacing="15dip" />
+            android:verticalSpacing="15dip"/>
 
         <ImageView
             android:id="@+id/remote_main_img_arrow"
