--- a/app/src/main/res/layout/item_car_now_status.xml
+++ b/app/src/main/res/layout/item_car_now_status.xml
@@ -42,14 +42,14 @@
             android:paddingRight="5dp"
             android:paddingLeft="5dp"
             android:gravity="center_vertical|right"
-            android:textColor="@color/text_color_gray1"
+            android:textColor="@color/text_color_gray3"
             android:textSize="18sp"/>
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#4d4d4d"
+        android:background="@color/text_color_gray4"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         />
